--- a/leather/assets/stylesheet/global.css
+++ b/leather/assets/stylesheet/global.css
@@ -25,6 +25,7 @@ body {
     --light-red: #ff2241;
     --light-gray-cl: #d9d9d9;
     --light-pink-cl: #fbeee2;
+    --light-white-cl: #c0c0c0;
 }
 /* colors */
 
@@ -53,7 +54,7 @@ a {
 }
 
 .side_padding {
-    padding: 0 150px;
+    padding: 0 200px;
 }
 
 .side_padding_one {
