--- a/leather/assets/stylesheet/navbar.css
+++ b/leather/assets/stylesheet/navbar.css
@@ -7,6 +7,10 @@
     margin: 0 0.5rem;
 }
 
+.nav-link {
+    width: max-content;
+}
+
 .top_header h5 {
     color: var(--main-cl);
     font-weight: 200;
