--- a/busNet/public/stylesheet/global.css
+++ b/busNet/public/stylesheet/global.css
@@ -12,6 +12,9 @@
     --dark-blue: #095a90;
     --dark-cl: #000000;
     --gray-cl: #b5a4a4;
+    --dark_blue_cl: #095a90;
+    --smooth_gray: #7c7c7c;
+    --smooth-white-cl: #f3f3f3;
 }
 /* root */
 
