--- a/busNet/public/stylesheet/index.css
+++ b/busNet/public/stylesheet/index.css
@@ -53,6 +53,7 @@
     width: 100%;
     height: 900px;
     background-image: url(../images/asa1.png);
+    background-repeat: no-repeat;
     background-position: bottom;
     display: flex;
     align-items: flex-end;
@@ -87,7 +88,7 @@
     width: 60%;
 }
 .sm-line-two {
-    max-width: 40%;
+    max-width: 30%;
     margin: auto;
 }
 .card-div {
@@ -154,9 +155,17 @@
     color: var(--main-cl);
 }
 .technology_stack .light-tab {
-    background-color: var(--main-cl);
-    border-left: 2px solid var(--dark-blue);
+    background-color: var(--smooth-white-cl);
+    /* border-left: 2px solid var(--dark-blue); */
     filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+.technology_stack .light-tab:hover {
+    background-color: var(--dark-blue);
+}
+.technology_stack .light-tab:hover p {
+    color: var(--main-cl);
 }
 .technology_stack .light-tab p {
     color: var(--dark-cl);
