--- a/busNet/public/stylesheet/index.css
+++ b/busNet/public/stylesheet/index.css
@@ -85,7 +85,7 @@
     border-radius: 30px;
 }
 .sm-line {
-    width: 60%;
+    max-width: 60%;
 }
 .sm-line-two {
     max-width: 30%;
@@ -145,10 +145,41 @@
 }
 .technology_stack .tab_div {
     width: 100%;
-    background-color: var(--dark-blue);
+    /* background-color: var(--dark-blue); */
     border-radius: 5px;
     padding: 0.7rem 1.2rem;
     margin-bottom: 1rem;
+    transition: all 0.3s ease;
+}
+.technology_stack .tec_div {
+    width: 100%;
+    padding: 2rem;
+    height: 100%;
+    background-color: var(--main-cl);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px -1px 22px -7px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px -1px 22px -7px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px -1px 22px -7px rgba(0, 0, 0, 0.4);
+}
+.icons_tabs_div {
+    display: none;
+}
+.tb_active {
+    display: block;
+}
+.tec_div img {
+    width: 100%;
+    height: 100px;
+}
+.tec_div p {
+    margin: 0;
+    margin-top: 1rem;
+}
+.active_tab_content {
+    background-color: var(--dark-blue) !important;
+}
+.active_tab_content p {
+    color: var(--main-cl) !important;
 }
 .technology_stack .tab_div p {
     margin: 0;
