--- a/busNet/public/stylesheet/index.css
+++ b/busNet/public/stylesheet/index.css
@@ -364,3 +364,12 @@
     color: var(--main-cl);
 }
 /* Let Us Bring Our Visions Together  */
+
+/* ///////////////////////////////////////////// */
+.retial {
+    display: none;
+}
+.retial_active {
+    display: block;
+}
+/* ///////////////////////////////////////////// */
